compiler/tests/errortests/arithmetic/arithmetic-incomplete-xor.txt
FILENAME:3:23: error: missing right hand side expression after 'xor' operator
    let y : i32 = x ^ ;
                      ^
